@@ -59,14 +59,12 @@ ISABELLE_BUILD_OPTIONS=""
 ### Document preparation (cf. isabelle latex/document)
 ###
 
-ISABELLE_LATEX="latex -file-line-error"
 ISABELLE_PDFLATEX="pdflatex -file-line-error"
 ISABELLE_BIBTEX="bibtex"
 ISABELLE_MAKEINDEX="makeindex"
 ISABELLE_EPSTOPDF="epstopdf"
 
 if [ "$ISABELLE_PLATFORM_FAMILY" = "windows" ]; then
-  ISABELLE_LATEX="latex -c-style-errors"
   ISABELLE_PDFLATEX="pdflatex -c-style-errors"
 fi
 
@@ -140,7 +138,6 @@ case "$ISABELLE_PLATFORM_FAMILY" in
 esac
 
 PDF_VIEWER="$ISABELLE_OPEN"
-DVI_VIEWER="$ISABELLE_OPEN"
 
 
 ###
